tests/baselines/reference/unusedPrivateMethodInClass2.errors.txt
tests/cases/compiler/unusedPrivateMethodInClass2.ts(3,13): error TS6133: Variable 'function1' has never been used.
tests/cases/compiler/unusedPrivateMethodInClass2.ts(8,13): error TS6133: Variable 'function2' has never been used.


==== tests/cases/compiler/unusedPrivateMethodInClass2.ts (2 errors) ====
    
    class greeter {
        private function1() {
                ~~~~~~~~~
!!! error TS6133: Variable 'function1' has never been used.
            var y = 10;
            y++;
        }
    
        private function2() {
                ~~~~~~~~~
!!! error TS6133: Variable 'function2' has never been used.
            var y = 10;
            y++;
        }
    }